# open-agent-tools-coder

./: .gitignore  MANIFEST.in  README.md  example-env.sh  pyproject.toml  pyrightconfig.json  tox.ini
.ai/: AGENT.repo_uses.python.tools.json
oats/: AGENT.dir.python.tools.json  AGENT.python.tools.md  agent_get_tool_choices_for_prompt.py  agent_get_tool_choices_for_prompt.py.AGENT.python.tools.json  call_tool_with_loader1.py  call_tool_with_loader1.py.AGENT.python.tools.json  date.py  date.py.AGENT.python.tools.json  determine_best_tools1.py  determine_best_tools1.py.AGENT.python.tools.json  get_oat_config.py  get_oat_config.py.AGENT.python.tools.json  load_tools_from_source1.py  load_tools_from_source1.py.AGENT.python.tools.json  log.py  log.py.AGENT.python.tools.json  models.py  models.py.AGENT.python.tools.json  pp.py  pp.py.AGENT.python.tools.json  setup_coder_config.py
oats/agent/: AGENT.dir.python.tools.json  AGENT.python.tools.md  agent.py  agent.py.AGENT.python.tools.json
oats/cli/: AGENT.dir.python.tools.json  AGENT.python.tools.md  approval.py  approval.py.AGENT.python.tools.json  check_providers.py  check_providers.py.AGENT.python.tools.json  interactive.py  interactive.py.AGENT.python.tools.json  process_message.py  process_message.py.AGENT.python.tools.json  validate_coder_env.py
oats/config/: coder.json  single-vllm-small-coder.json
oats/core/: AGENT.dir.python.tools.json  AGENT.python.tools.md  __init__.py  bus.py  bus.py.AGENT.python.tools.json  config.py  config.py.AGENT.python.tools.json  features.py  features.py.AGENT.python.tools.json  id.py  id.py.AGENT.python.tools.json  offline.py  offline.py.AGENT.python.tools.json  profiles.py  profiles.py.AGENT.python.tools.json  storage.py  storage.py.AGENT.python.tools.json  tokens.py  tokens.py.AGENT.python.tools.json
oats/git/: AGENT.dir.python.tools.json  AGENT.python.tools.md  __init__.py  build_git_repo_to_dataset.py  build_git_repo_to_dataset.py.AGENT.python.tools.json  coauthor.py  coauthor.py.AGENT.python.tools.json  git_commit_search1.py  git_commit_search1.py.AGENT.python.tools.json  git_diff_extractor.py  git_diff_extractor.py.AGENT.python.tools.json  git_to_df_converter.py  git_to_df_converter.py.AGENT.python.tools.json  repo_to_parquet.py  repo_to_parquet.py.AGENT.python.tools.json  walk_up_dir_path_to_find_git_config.py  walk_up_dir_path_to_find_git_config.py.AGENT.python.tools.json  worktree.py  worktree.py.AGENT.python.tools.json
oats/hook/: AGENT.dir.python.tools.json  AGENT.python.tools.md  __init__.py  engine.py  engine.py.AGENT.python.tools.json
oats/lsp/: AGENT.dir.python.tools.json  AGENT.python.tools.md  __init__.py  client.py  client.py.AGENT.python.tools.json
oats/mcp/: AGENT.dir.python.tools.json  AGENT.python.tools.md  config.py  config.py.AGENT.python.tools.json  example_mcp_config.json  fetch.py  index.py  intent.py  models.py  (+16 more)
stack/: .gitignore  restart-tool-functiongemma-1.sh  restart-vllm-qwen36-27b.sh  restart-vllm-qwen36-35b.sh
(+139 files in other folders)
